tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier2MV-AAAAAAAAAAAAAAAAAAAABA==__Glycerol-AAAAAAAAAAAAAAAAAAAEyg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1226,
  "prerequisites": [
    845
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Glycerol is a byproduct of making bio diesel, but it's really useful too. It's used to make epoxid in EV, and for making dynamite, I guess. Both TNT and iTNT are better though.\n\n[note]PS: You don't actually need dynamite, and epoxid can be made another way, if you don't want to make bio diesel forever/at all.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lGlycerol",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    845
  ],
  "rewards": [],
  "tasks": []
}
