tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier2MV-AAAAAAAAAAAAAAAAAAAABA==__GoodIntegratedCi-AAAAAAAAAAAAAAAAAAADGQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 793,
  "prerequisites": [
    794
  ],
  "properties": {
    "auto_claim": false,
    "desc": "By the way, did you ever try looking at the oredict for circuits? You can tell what tier they are from that. They go: Primitive (ULV), Basic (LV), Good (MV), Advanced (HV), etc. Now make your Good Integrated Circuits.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lGood Integrated Circuits",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    794
  ],
  "rewards": [],
  "tasks": []
}
