tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier2MV-AAAAAAAAAAAAAAAAAAAABA==__GrindingHeadsAre-AAAAAAAAAAAAAAAAAAAIJg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2086,
  "prerequisites": [
    145
  ],
  "properties": {
    "auto_claim": false,
    "desc": "While the SAG mill will work with no grinding heads, flint heads only save a little power. If you want to exploit the true capability of the SAG mill, you want to use Diamond or Tungsten grinding heads. Craft me a Diamond head and I'll give you a Tungsten one as a reward.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lGrinding Heads Are Better Than None",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    145
  ],
  "rewards": [],
  "tasks": []
}
