tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier2MV-AAAAAAAAAAAAAAAAAAAABA==__GutEnoughForYouB-AAAAAAAAAAAAAAAAAAAHeQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1913,
  "prerequisites": [
    1867
  ],
  "properties": {
    "auto_claim": false,
    "desc": "When used together, the Typesetting Table and Printing Press allow you to duplicate enchanted books. You'll need a lot of XP, so either build a mob grinder or get farming. A Fortune III book, for example, requires 40 levels to convert into an enchanted plate.\n\nTo use the §lTypesetting Table§r, place a print press chase in the top slot and an enchanted book in the bottom left slot. Sneak right-click the enchanted book to convert it into an enchanted plate if you have enough XP.\n\nTo use the §lPrinting Press§r, place an enchanted plate in the center of the machine, ink sacs on the top metal plate, and books on the bottom left side of the counter. It immediately starts processing without any power or redstone signal.\n\nWearing Reading Glasses, Tinted Glasses, or a Monocle will display more information about these blocks when looking at them.\n\nEach enchanted plate can make three enchanted books before breaking, but the trick is to make two books and then repair it in a Thaumic Restorer for unlimited uses.\n\n[note]You'll need some Thaumium ingots. You can get into Thaumcraft, find some in a chest, or try breeding the Magic Metal Berry IC2 crop.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lGut-Enough For You? Bet You Thought Newspapers Were Dead!",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1867
  ],
  "rewards": [],
  "tasks": []
}
