tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier2MV-AAAAAAAAAAAAAAAAAAAABA==__HCL-AAAAAAAAAAAAAAAAAAAEyw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1227,
  "optional_prerequisites": [
    1020,
    1021,
    1549
  ],
  "prerequisites": [],
  "properties": {
    "auto_claim": false,
    "desc": "More than just a byproduct of your Sodium Persulfate production. HCl becomes important for Epoxid in HV/EV tier. You can also use it to process bee combs.\n\nYou can also make it directly from Hydrogen and Chlorine.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lHCL",
    "party_single_reward": false,
    "quest_logic": "OR",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "rewards": [],
  "tasks": []
}
