tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier2MV-AAAAAAAAAAAAAAAAAAAABA==__HangoverFromAllT-AAAAAAAAAAAAAAAAAAAKsA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2736,
  "prerequisites": [
    759,
    1598
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Surface-mount devices are more advanced circuits parts. They're needed for the EV tier+ circuit line and are cheaper to craft than the basic versions, if you have the right materials. You need an MV Assembler and some molten polyethylene. For now, resistors are probably the only ones you can make with any ease.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lHangover From All That Glue?",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    759,
    1598
  ],
  "rewards": [],
  "tasks": []
}
