tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier2MV-AAAAAAAAAAAAAAAAAAAABA==__IOIOItsOfftoEnde-AAAAAAAAAAAAAAAAAAAAgA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 128,
  "prerequisites": [
    1867
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You've probably used EnderIO before. It's quite useful for a lot of things. But the recipes are different and it's not as useful for some things like ore processing. Let's go through what it has to offer. Note that the other half is in HV.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lIO, IO, It's Off to EnderIO We Go",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1867
  ],
  "rewards": [],
  "tasks": []
}
